--- a/style.css
+++ b/style.css
@@ -381,3 +381,10 @@ a {
   border: 2px solid wheat;
   border-radius: 10px;
 }
+
+.frame {
+  border: 2px solid #E6D5B8;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+}
